@@ -1,4 +1,5 @@
 1.9.3:
+* Client/WebUI/Net: New "Freeze stats" option and manual refresh buttons
 * Wallet: disallow uncompressed keys, for WPKH segwit address safety
 * Client: Ignore the value of MAX_GETDATA_FORWARD when there are no blocks in progress
 * MarshalText() method madded to "sys.SyncBool" and "sys.SyncInt" (fixes WebUI issue)
